# ManyLandsSonification

./: .gitignore  CMakeLists.txt  oscp-server.scd
include/glm/glm/: trigonometric.hpp
include/glm/glm/gtx/: compatibility.hpp
include/imgui/: imgui.cpp  imgui_demo.cpp
include/stk/: Mutex.h
src/: Audio.cpp  Audio.h  Consts.h  Curve.cpp  Curve.h  Curve_stats.h  Geometry_engine.h  Mesh_generator.cpp  OscpController.cpp  OscpController.h  Scene.cpp  Scene_renderer.cpp  Scene_state.h  Screen_shader.cpp  Timeline_renderer.cpp  Transport.cpp  Transport.h  main.cpp
